--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="right-image">
-                          <img src="img/About.jpg" alt="">
+                          <img src="img/ABOUT.jpg" alt="">
                       </div>
                     </div>
                 </div>
